# vvenc-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  test_cli.sh
.devcontainer/: Dockerfile
.github/workflows/: test.yml
libvvenc-sys/: Cargo.toml  build.rs
src/: chroma_format.rs  config.rs  encoder.rs  encoder_output.rs  error.rs  internal_traits.rs  lib.rs  logging_callback.rs  slice_type.rs  yuv_buffer.rs
src/config/: chroma_format.rs  config.rs  decoding_refresh_type.rs  hdr_mode.rs  level.rs  mod.rs  preset.rs  profile.rs  segment_mode.rs  tier.rs  verbosity.rs
tests/: basic.rs
vvenc-sys/: Cargo.toml  build.rs  wrapper.h
vvencli/: Cargo.toml
vvencli/src/: main.rs
