[package]
name = "vvenc"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vvenc-sys = { path = "vvenc-sys", version = "0.0.1" }
thiserror = "1.0"
vsprintf = "2.0"

[workspace]
members = ["vvenc-sys", "vvencli"]
