[package]
name = "vvenc"
version = "0.0.1"
edition = "2021"
authors = ["Carlos Bentzen <cadubentzen@gmail.com>"]
description = "Rust bindings for VVenC"
license = "BSD-3-Clause-Clear"
repository = "https://github.com/cadubentzen/vvenc-rs"

[dependencies]
vvenc-sys = { path = "vvenc-sys", version = "0.0.1" }
thiserror = "1.0"
vsprintf = "2.0"

[workspace]
members = ["vvenc-sys", "vvencli"]
