[workspace]
members = ["vvenc-sys"] # , "vvencli"]

[workspace.package]
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/cadubentzen/vvenc-rs"
authors = ["Carlos Bentzen <cadubentzen@igalia.com>"]
license = "BSD-3-Clause-Clear"

[package]
name = "vvenc"
version = "0.1.0"
description = "Rust bindings for VVenC"
exclude = ["tests/", ".devcontainer/", ".github/"]
authors.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2"
vsprintf = "2.0.0"
vvenc-sys = { path = "./vvenc-sys", version = "0.1.0" }

[features]
vendored = ["vvenc-sys/vendored"]
