[package]
name = "vvenc-sys"
version = "0.0.1"
edition = "2021"
links = "vvenc"
authors = ["Carlos Bentzen <cadubentzen@gmail.com>"]
description = "Rust unsafe bindings for VVenC"
license = "BSD-3-Clause-Clear"
repository = "https://github.com/cadubentzen/vvenc-rs"

[build-dependencies]
bindgen = "0.69"
cmake = "0.1"
pkg-config = "0.3"
