[package]
name = "vvenc-sys"
version = "0.1.0"
links = "vvenc"
description = "Rust unsafe bindings for VVenC"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
bindgen = "0.71"
pkg-config = "0.3"
cmake = { version = "0.1", optional = true }

[features]
vendored = ["dep:cmake"]

[package.metadata.docs.rs]
features = ["vendored"]
