[package]
name = "vvencli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.11", features = ["derive"] }
vvenc = { path = "..", version = "0.1.0"}
y4m = "0.7.0"
