[package]
name = "vvencli"
version = "0.0.1"
edition = "2021"
authors = ["Carlos Bentzen <cadubentzen@gmail.com>"]
description = "CLI app for VVenC"
license = "BSD-3-Clause-Clear"
repository = "https://github.com/cadubentzen/vvenc-rs"

[dependencies]
vvenc = { path = "..", version = "0.0.1" }
y4m = "0.8"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
