[package]
name = "vvencli"
version = "0.1.0"
description = "CLI app for VVenC"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vvenc = { path = "..", version = "0.1.0" }
y4m = "0.8"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
